--- a/package.json
+++ b/package.json
@@ -31,8 +31,6 @@
     "bitcoind": "./bin/bitcoind"
   },
   "scripts": {
-    "preinstall": "./scripts/download",
-    "verify": "./scripts/download --skip-bitcoin-download --verify-bitcoin-download",
     "test": "mocha -R spec --recursive",
     "regtest": "./scripts/regtest",
     "jshint": "jshint --reporter=node_modules/jshint-stylish ./lib",
@@ -45,8 +43,8 @@
   ],
   "dependencies": {
     "async": "^1.3.0",
-    "bitcoind-rpc": "^0.6.0",
     "bitcore-lib": "^0.13.13",
+    "bitcoin-core": "https://github.com/BitGo/bitcoin-core",
     "body-parser": "^1.13.3",
     "colors": "^1.1.2",
     "commander": "^2.8.1",
