--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     }
   ],
   "bin": {
-    "bitcore-node": "./bin/bitcore-node",
-    "bitcoind": "./bin/bitcoind"
+    "bitcore-node": "./bin/bitcore-node"
   },
   "scripts": {
     "test": "mocha -R spec --recursive",
@@ -38,8 +37,7 @@
     "coveralls": "./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- --recursive -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
   },
   "tags": [
-    "bitcoin",
-    "bitcoind"
+    "bitcoin"
   ],
   "dependencies": {
     "async": "^1.3.0",
