Define bitcore-lib package git url
Summary:
This patch applies in bitcore-node
 - Use bitcore-lib from our repo

Reviewers: barath

Reviewed By: barath

Differential Revision: https://phabricator.bitgo.com/D4009

--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
   "dependencies": {
     "async": "^1.3.0",
     "bitcoin-core": "https://github.com/BitGo/bitcoin-core",
-    "bitcore-lib": "^0.13.13",
+    "bitcore-lib": "https://github.com/BitGo/bitcore-lib",
     "body-parser": "^1.13.3",
     "colors": "^1.1.2",
     "commander": "^2.8.1",
