--- a/package.json
+++ b/package.json
@@ -52,9 +52,11 @@
     "lru-cache": "^4.0.1",
     "mkdirp": "0.5.0",
     "path-is-absolute": "^1.0.0",
+    "redis": "2.7.1",
     "semver": "^5.0.1",
     "socket.io": "^1.4.5",
     "socket.io-client": "^1.4.5",
+    "socket.io-redis": "5.1.0",
     "ws": "1.1.1"
   },
   "optionalDependencies": {
