--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "author": "BitPay <dev@bitpay.com>",
   "version": "3.1.3",
   "main": "./index.js",
-  "repository": "git://github.com/bitpay/bitcore-node.git",
-  "homepage": "https://github.com/bitpay/bitcore-node",
+  "repository": "git://github.com/apollomatheus/bitcore-node.git",
+  "homepage": "https://github.com/apollomatheus/bitcore-node",
   "bugs": {
-    "url": "https://github.com/bitpay/bitcore-node/issues"
+    "url": "https://github.com/apollomatheus/bitcore-node/issues"
   },
   "contributors": [
     {
@@ -41,8 +41,8 @@
   ],
   "dependencies": {
     "async": "^1.3.0",
-    "bitcoin-core": "https://github.com/BitGo/bitcoin-core",
-    "bitcore-lib": "https://github.com/BitGo/bitcore-lib#fe87c5b8a101b1d397a240db6ec7aba6ade1679e",
+    "bitcoin-core": "https://github.com/apollomatheus/bitcoin-core",
+    "bitcore-lib": "https://github.com/apollomatheus/bitcore-lib#fe87c5b8a101b1d397a240db6ec7aba6ade1679e",
     "body-parser": "^1.13.3",
     "colors": "^1.1.2",
     "commander": "^2.8.1",
